feat(backend): added weight to trained exercise patch route